# poetry-plugin-env-deps

./: pyproject.toml
src/poetry_plugin_env_deps/: __init__.py  plugin.py
